--- a/index.html
+++ b/index.html
@@ -9,22 +9,32 @@
   </head>
   <body>
     <div id="app">
+      <div class="navOverlay"></div>
       <nav>
-        <div class="navtoggler">
-          <box-icon name='menu' size="sm" color="white" flip='horizontal'></box-icon>
-        </div>
-        <div class="navContents">
-          <div class="item activeItem">
-            <box-icon name='question-mark' size="md" color="white" ></box-icon>
-            <p>Ask Me</p>
+        <div class="navWrapper">
+          <div class="navContents">
+            <div class="navClose">
+              <box-icon name='x-circle' size="md" color="white" flip='horizontal'></box-icon>
+            </div>
+            <div class="item activeItem topMargin">
+              <box-icon name='question-mark' size="md" color="white" ></box-icon>
+              <p>Ask Me</p>
+            </div>
+            <div class="item">
+              <box-icon name='image-alt' size="md" color="white" flip='horizontal'></box-icon>
+              <p>Generate Images</p>
+            </div>
           </div>
-          <div class="item">
-            <box-icon name='image-alt' size="md" color="white" flip='horizontal'></box-icon>
-            <p>Generate Images</p>
-          </div>
         </div>
-      </nav>
+        </nav>
+
       <div class="right" id="createCompletion">
+        <div class="navtoggler">
+          <p>Frank's AI.</p>
+          <div class="menuBar">
+            <box-icon name='menu' size="md" color="white" flip='horizontal'></box-icon>
+          </div>
+        </div>
         <div id="chatArea">
           <div class="human">
             <div class="humanIcon">
@@ -47,7 +57,23 @@
         </form>
       </div>
 
+
+
+
+
+
+
+
+
+
+      <!-- IMAGE CREATION PART -->
       <div class="right" id="createImage">
+        <div class="navtoggler">
+          <p>Frank's AI.</p>
+          <div class="menuBar">
+            <box-icon name='menu' size="md" color="white" flip='horizontal'></box-icon>
+          </div>
+        </div>
         <div id="chatArea">
           <div class="human">
             <div class="humanIcon">
