--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
               <box-icon name='bot' size="sm" color="white" flip='horizontal'></box-icon>
             </div>
             <p class="botAnswer">Hi, how may i be of help? </p>
+              <div class="copyBtn">
+                <box-icon name='copy' color="#6E7681" size="sm"></box-icon>
+              </div>
           </div>
         </div>
   
@@ -88,7 +91,12 @@
             </div>
             <span class="botImageLoader">Give a description of the image you want to generate</span>
             <div class="imageContainer">
-              <img class="botImageAnswer" src="" alt="">
+              <!-- <div class="downloadBtn">
+                <box-icon name='download' color="#6E7681" size="sm" color="white"></box-icon>
+              </div> -->
+              <div class="imgCanvas">
+                <img class="botImageAnswer" src="" alt="">
+              </div>
             </div>
           </div>
         </div>
@@ -113,6 +121,10 @@
 
 
     </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.0/FileSaver.min.js"></script>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
