updated the color of the copy icon

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
             <p class="botAnswer">Hi, how may i be of help? </p>
               <div class="copyBtn">
-                <box-icon name='copy' color="#6E7681" size="sm"></box-icon>
+                <box-icon name='copy' color="#6E7681" size="sm" class="copyIcon"></box-icon>
               </div>
           </div>
         </div>
