fixed the bottom text

--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
         <form class="chatTextAndBtn">
           <textarea id="textArea" name="prompt" placeholder="Ask My Ai"></textarea>
           <button type="submit" class="createCompletionBtn">Submit</button>
+          <div class="bottomText">
+            <p>Built with</p>
+            <box-icon name='heart' type='solid' size="sm" color="red"></box-icon>
+            <p>by Frank</p>
+          </div>
         </form>
       </div>
 
@@ -120,6 +125,7 @@
         <form class="chatTextAndBtn">
           <textarea id="textArea" name="prompt" placeholder="Ask My Ai"></textarea>
           <button type="submit" class="handleImageGenerationBtn">Submit</button>
+          
         </form>
       </div>
 
