added a submit key for ctrl and enter

--- a/index.html
+++ b/index.html
@@ -5,110 +5,98 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frank's AI</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body class="lightMode">
     <div id="app">
       <div class="navOverlay"></div>
 
-
       <nav>
         <div class="navContents">
           <div class="navClose">
-            <box-icon name='x-circle' size="md" color="white" flip='horizontal'></box-icon>
+            <box-icon name="x-circle" size="md" color="white" flip="horizontal"></box-icon>
           </div>
           <div class="item activeItem topMargin">
-            <box-icon name='question-mark' size="md" color="white" ></box-icon>
+            <box-icon name="question-mark" size="md" color="white"></box-icon>
             <p>Ask Me</p>
           </div>
           <div class="item">
-            <box-icon name='image-alt' size="md" color="white" flip='horizontal'></box-icon>
+            <box-icon name="image-alt" size="md" color="white" flip="horizontal"></box-icon>
             <p>Generate Images</p>
           </div>
         </div>
         <div class="contact">
           <a href="https://wa.me/+2348139362969" class="navBottom item">
-            <box-icon name='whatsapp' size="sm" color="white" type='logo' ></box-icon>
+            <box-icon name="whatsapp" size="sm" color="white" type="logo"></box-icon>
             <p>Let's Chat</p>
           </a>
           <a href="https://twitter.com/Frank_Dev007" class="navBottom item">
-            <box-icon name='twitter' size="sm" color="white" type='logo' ></box-icon>
+            <box-icon name="twitter" size="sm" color="white" type="logo"></box-icon>
             <p>Let's Tweet</p>
           </a>
           <a href="https://www.linkedin.com/in/franklin-chinedu/" class="navBottom item">
-            <box-icon name='linkedin' size="sm" color="white" type='logo' ></box-icon>
+            <box-icon name="linkedin" size="sm" color="white" type="logo"></box-icon>
             <p>Let's Link Up</p>
           </a>
         </div>
       </nav>
 
-
-
       <div class="right" id="createCompletion">
         <div class="navtoggler">
           <p>Frank's AI.</p>
           <div class="menuBar">
-            <box-icon name='menu' size="md" color="white" flip='horizontal'></box-icon>
+            <box-icon name="menu" size="md" color="white" flip="horizontal"></box-icon>
           </div>
         </div>
         <div id="chatArea">
           <div class="human">
             <div class="humanIcon">
-              <box-icon name='user' size="sm" color="white" flip='horizontal'></box-icon>
+              <box-icon name="user" size="sm" color="white" flip="horizontal"></box-icon>
             </div>
-            <p class="humanRequest">Hello Bot 	&#128075;</p>
+            <p class="humanRequest">Hello Bot &#128075;</p>
           </div>
-  
+
           <div class="bot">
             <div class="botIcon">
-              <box-icon name='bot' size="sm" color="white" flip='horizontal'></box-icon>
+              <box-icon name="bot" size="sm" color="white" flip="horizontal"></box-icon>
             </div>
-            <p class="botAnswer">Hi, how may i be of help? </p>
-              <div class="copyBtn">
-                <box-icon name='copy' color="#6E7681" size="sm" class="copyIcon"></box-icon>
-              </div>
+            <p class="botAnswer">Hi, how may i be of help?</p>
+            <div class="copyBtn">
+              <box-icon name="copy" color="#6E7681" size="sm" class="copyIcon"></box-icon>
+            </div>
           </div>
         </div>
-  
+
         <form class="chatTextAndBtn">
-          <textarea id="textArea" name="prompt" placeholder="Ask My Ai"></textarea>
+          <textarea id="textArea" name="prompt" placeholder="....Ask My Ai"></textarea>
           <button type="submit" class="createCompletionBtn">Submit</button>
           <div class="bottomText">
             <p>Built with</p>
-            <box-icon name='heart' type='solid' size="sm" color="red"></box-icon>
+            <box-icon name="heart" type="solid" size="sm" color="red"></box-icon>
             <p>by Frank</p>
           </div>
         </form>
       </div>
-
-
-
-
-
-
-
-
-
 
       <!-- IMAGE CREATION PART -->
       <div class="right" id="createImage">
         <div class="navtoggler">
           <p>Frank's AI.</p>
           <div class="menuBar">
-            <box-icon name='menu' size="md" color="white" flip='horizontal'></box-icon>
+            <box-icon name="menu" size="md" color="white" flip="horizontal"></box-icon>
           </div>
         </div>
         <div id="chatArea">
           <div class="human">
             <div class="humanIcon">
-              <box-icon name='user' size="sm" color="white" flip='horizontal'></box-icon>
+              <box-icon name="user" size="sm" color="white" flip="horizontal"></box-icon>
             </div>
-            <p class="humanImageRequest">Hello Bot 	&#128075;</p>
+            <p class="humanImageRequest">Hello Bot &#128075;</p>
           </div>
-  
+
           <div class="bot">
             <div class="botIcon">
-              <box-icon name='bot' size="sm" color="white" flip='horizontal'></box-icon>
+              <box-icon name="bot" size="sm" color="white" flip="horizontal"></box-icon>
             </div>
             <span class="botImageLoader">Give a description of the image you want to generate</span>
             <div class="imageContainer">
@@ -116,37 +104,44 @@
                 <box-icon name='download' color="#6E7681" size="sm" color="white"></box-icon>
               </div> -->
               <div class="imgCanvas">
-                <img class="botImageAnswer" src="" alt="">
+                <img class="botImageAnswer" src="" alt="" />
               </div>
             </div>
           </div>
         </div>
-  
+
         <form class="chatTextAndBtn">
           <textarea id="textArea" name="prompt" placeholder="Ask My Ai"></textarea>
           <button type="submit" class="handleImageGenerationBtn">Submit</button>
-          
         </form>
       </div>
 
-          <!--====== Modal-02 ======-->
-          <div class="modal">
-            <div class="modal_content">
-              <div class="modalClose">
-                <box-icon size="sm" color="white" name='x-circle'></box-icon>
-              </div>
-              <div class="modal_body">
-                  <p>The input field cannot be left empty</p>
-              </div>
+      <!--====== Modal-02 ======-->
+      <div class="modal">
+        <div class="modal_content">
+          <div class="modalClose">
+            <box-icon size="sm" color="white" name="x-circle"></box-icon>
+          </div>
+          <div class="modal_body">
+            <p>The input field cannot be left empty</p>
           </div>
         </div>
-
-
+      </div>
     </div>
+
+    <!-- <script>
+      console.log(document.querySelector("textarea"));
+
+      document.querySelector("textarea").addEventListener("keypress", function (event) {
+        if (event.ctrlKey === true) {
+          console.log("Ctrl Enter");
+        }
+      });
+    </script> -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.0/FileSaver.min.js"></script>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
