added an auto resize feature for the text area

--- a/index.html
+++ b/index.html
@@ -76,8 +76,10 @@
         </div>
 
         <form class="chatTextAndBtn">
-          <textarea id="textArea" name="prompt" placeholder="....Ask My Ai"></textarea>
-          <button type="submit" class="createCompletionBtn">Submit</button>
+          <div class="promptArea">
+            <textarea id="textArea" name="prompt" placeholder="....Ask My Ai"></textarea>
+            <button type="submit" class="createCompletionBtn">Submit</button>
+          </div>
           <div class="bottomText">
             <p>Built with</p>
             <i class="ph-heart"></i>
